@startuml
abstract class soft252git.Page
annotation java.lang.Override
class java.io.FileNotFoundException
class java.util.Scanner
class soft252git.AccountVeiwer
class soft252git.Adminhome
class soft252git.Appointment
class soft252git.AppointmentMaker
class soft252git.AppointmentRequester
class soft252git.Data
class soft252git.DoctorAppointmentsVeiwer
class soft252git.DoctorHistoryVeiwer
class soft252git.DoctorPrescriptionWriter
class soft252git.Doctorhome
class soft252git.Feedback
class soft252git.History
class soft252git.Login
class soft252git.MedStockVeiwer
class soft252git.Medicine
class soft252git.MedicineRequestWindow
class soft252git.NewUser
class soft252git.NotesWriter
class soft252git.Pagemanager
class soft252git.PatientAppointmentsVeiwer
class soft252git.PatientHistoryVeiwer
class soft252git.PatientPrescriptionVeiwer
class soft252git.PatientRatingsVeiwer
class soft252git.Patienthome
class soft252git.Prescription
class soft252git.PrescriptionFill
class soft252git.Rating
class soft252git.RatingMaker
class soft252git.RatingsVeiwer
class soft252git.Request
class soft252git.SecretaryHome
class soft252git.Soft252Git
class soft252git.TerminationWindow
class soft252git.User
interface soft252git.ActionListener
soft252git.Page ..> java.lang.Override
soft252git.Page --|> soft252git.ActionListener
soft252git.AccountVeiwer --|> soft252git.Page
soft252git.AccountVeiwer ..> java.lang.Override
soft252git.Adminhome --|> soft252git.Page
soft252git.Adminhome ..> java.lang.Override
soft252git.AppointmentMaker --|> soft252git.Page
soft252git.AppointmentMaker ..> java.lang.Override
soft252git.AppointmentRequester --|> soft252git.Page
soft252git.AppointmentRequester ..> java.lang.Override
soft252git.Data ..> java.io.FileNotFoundException
soft252git.Data ..> java.util.Scanner
soft252git.DoctorAppointmentsVeiwer --|> soft252git.Page
soft252git.DoctorAppointmentsVeiwer ..> java.lang.Override
soft252git.DoctorHistoryVeiwer --|> soft252git.Page
soft252git.DoctorHistoryVeiwer ..> java.lang.Override
soft252git.DoctorPrescriptionWriter --|> soft252git.Page
soft252git.DoctorPrescriptionWriter ..> java.lang.Override
soft252git.Doctorhome --|> soft252git.Page
soft252git.Doctorhome ..> java.lang.Override
soft252git.Login --|> soft252git.Page
soft252git.Login ..> java.lang.Override
soft252git.MedStockVeiwer --|> soft252git.Page
soft252git.MedStockVeiwer ..> java.lang.Override
soft252git.MedicineRequestWindow --|> soft252git.Page
soft252git.MedicineRequestWindow ..> java.lang.Override
soft252git.NewUser --|> soft252git.Page
soft252git.NewUser ..> java.lang.Override
soft252git.NotesWriter --|> soft252git.Page
soft252git.NotesWriter ..> java.lang.Override
soft252git.PatientAppointmentsVeiwer --|> soft252git.Page
soft252git.PatientAppointmentsVeiwer ..> java.lang.Override
soft252git.PatientHistoryVeiwer --|> soft252git.Page
soft252git.PatientHistoryVeiwer ..> java.lang.Override
soft252git.PatientPrescriptionVeiwer --|> soft252git.Page
soft252git.PatientPrescriptionVeiwer ..> java.lang.Override
soft252git.PatientRatingsVeiwer --|> soft252git.Page
soft252git.PatientRatingsVeiwer ..> java.lang.Override
soft252git.Patienthome --|> soft252git.Page
soft252git.Patienthome ..> java.lang.Override
soft252git.PrescriptionFill --|> soft252git.Page
soft252git.PrescriptionFill ..> java.lang.Override
soft252git.RatingMaker --|> soft252git.Page
soft252git.RatingMaker ..> java.lang.Override
soft252git.RatingsVeiwer --|> soft252git.Page
soft252git.RatingsVeiwer ..> java.lang.Override
soft252git.SecretaryHome --|> soft252git.Page
soft252git.SecretaryHome ..> java.lang.Override
soft252git.TerminationWindow --|> soft252git.Page
soft252git.TerminationWindow ..> java.lang.Override
@enduml